--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -27,5 +27,5 @@ body
 		include sidebar
 	footer
 		block footer
-			#copyleft 🚀 Produly powered by <a href="https://cogearjs.org">Cogear.JS</a> &copy; 2018
+			#copyleft 🚀 Proudly powered by <a href="https://cogearjs.org">Cogear.JS</a> &copy; 2019
 	//- != content
